--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,13 @@
 .map_wrapper {
 	max-width: 100%;
 	width:100%;
-	overflow:hidden;
+	/* overflow:hidden; */
 }
 
 .map_box {
 	max-width: 100%;
 	margin: 0 auto;
-	overflow:hidden;
+	/* overflow:hidden; */
 }
 
 .map_wrapper .map_aspect_ratio {
@@ -17,16 +17,16 @@
 	height: 0;
 }
 
-
-.map_wrapper:fullscreen {
+.map_wrapper:fullscreen, .map_wrapper:-webkit-full-screen {
 	position: fixed;
 	top: 0;
 	right: 0;
 	bottom: 0;
 	left: 0;
 	z-index: 999999;
-	text-align: center;
+	/*text-align: center;*/
 	padding:10px;
+    width:100%;
 }
 
 
@@ -36,6 +36,33 @@
 	overflow:hidden;
 }
 
+/*
+.map_wrapper:fullscreen .imaps_fullscreen_button,
+.map_wrapper:-webkit-full-screen .imaps_fullscreen_button {
+	display:none !important;
+}
+:-webkit-full-screen-ancestor .imaps_fullscreen_button {
+    display:none !important;
+}
+*/
+
+/* make the height of the map, the same as the screen on Safari */
+.map_wrapper:-webkit-full-screen .map_aspect_ratio,
+:-webkit-full-screen-ancestor .map_wrapper .map_aspect_ratio {
+    padding-top:100vh !important;
+    width:100% !important;
+}
+
+/* Safari */
+.map_wrapper:-webkit-full-screen {
+    width:100vw !important;
+    max-width:100vw !important;
+}
+
+:-webkit-full-screen-ancestor .map_aspect_ratio {
+    width:100vw !important;
+    max-width:100vw !important;
+}
 
 .map_wrapper .map_container {
 	position: absolute;
@@ -107,13 +134,15 @@
 	margin-bottom:20px;
 }
 
-.map_wrapper:fullscreen .imaps_fullscreen_button {
-	display:none;
-}
 
 /* External Controls */
 .map_controls {
 	display: none;
+}
+
+/* remove browser outline on focus */
+.imapsButton-group:focus {
+	outline:none;
 }
 
 @media only screen and (max-width: 768px) {
@@ -124,6 +153,18 @@
 	.map_wrapper:fullscreen .imaps_fullscreen_button_only_mobile {
 		display:none;
 	}
+
+    /* hide in safari */
+    @supports (-webkit-hyphens:none)
+        {
+            .imaps_fullscreen_button_only_mobile {
+                display:none !important;
+            }
+
+            .imaps_fullscreen_button {
+                display:none !important;
+            }
+        }
 
 	/* External Controls */
 	.map_controls {
@@ -160,8 +201,16 @@
 
 /* Elementor Preview */
 .elementor-editor-active .map_wrapper .map_render {
+	content: 'Map';
+	color: #FFF;
+	background-color: #CCC;
+	padding:20px;
+}
+
+.oxygen-body .map_wrapper .map_render {
 	content: 'map';
 	background-color: #CCC;
+	padding:20px;
 }
 
 /* List of Maps Styles */
